﻿$Revision$
	$Author$ $Date$
	1. инициализация
	2. поправлен makefile

#Revision: 1604
	Author: ctapmex Date: 2010-10-31 22:14:16 +0500 (Вс, 31 окт 2010)
	1. возможные утечки памяти и неиспользуемые переменные

#Revision: 1602
	Author: ctapmex Date: 2010-10-31 00:34:17 +0600 (Вс, 31 окт 2010)
	1. Добавлена возможность указывать свой внешний файл со списком схем.

#Revision: 1601
	Author: ctapmex Date: 2010-10-30 23:40:27 +0600 (Сб, 30 окт 2010)
	1. Проверка возможности исполнения SetBgEditor перенесена в саму функцию. и красиво и решает ошибку.
	2. Добавлена возможность указывать свой внешний файл со списком цветовых стилей.

#Revision: 1598
	Author: ctapmex Date: 2010-10-27 17:15:32 +0600 (Ср, 27 окт 2010)
	1. читаем пользовательские значения параметров схем из реестра.

#Revision: 1595
	Author: ctapmex Date: 2010-10-25 21:23:18 +0600 (Пн, 25 окт 2010)
	1. читаем far`овские параметры не из proto.hrc, а из hrcsettings.xml

#Revision: 1594
	Author: ctapmex Date: 2010-10-25 20:17:52 +0600 (Пн, 25 окт 2010)
	1. теперь базы раскраски хранятся в папке base, и при запуске базы ищутся либо
		в этой папке, либо по указанному в настройках пути.

#Revision: 1592
	Author: ctapmex Date: 2010-10-25 15:56:13 +0600 (Пн, 25 окт 2010)
	1. в диалог настроек добавлено описание причины не включения TrueMod

#Revision: 1591
	Author: ctapmex Date: 2010-10-25 14:14:19 +0600 (Пн, 25 окт 2010)
	1. при ошибке нахождения баз ( ReloadBase) плагин падает

#Revision: 1590
	Author: ctapmex Date: 2010-10-25 14:09:06 +0600 (Пн, 25 окт 2010)
	1. отмена 1589 , неожиданное поведение "отмена действия " в VC

#Revision: 1589
	Author: ctapmex Date: 2010-10-25 13:57:06 +0600 (Пн, 25 окт 2010)
	1. при ошибке нахождения баз ( ReloadBase) плагин падает

#Revision: 1579
	Author: ctapmex Date: 2010-10-17 23:04:53 +0600 (Вс, 17 окт 2010)
	1. крест был всегда черным

#Revision: 1578
	Author: ctapmex Date: 2010-10-17 22:18:44 +0600 (Вс, 17 окт 2010)
	1. косметика диалога настроек
	2. доделал 1575
