@@ -1,5 +1,10 @@
 ﻿$Revision$
 	$Author$ $Date$
+	1. FarEditorSet::viewFile - убраны лишние проверки
+	2. Константы, инициализация переменных и небольшие оптимизации
+
+#Revision: 1605
+	Author: ctapmex Date: 2010-10-31 23:14:38 +0500 (Вс, 31 окт 2010)
 	1. инициализация
 	2. поправлен makefile
 
